Review 2 - contacts wrap fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
+  white-space: nowrap;
 }
 
 .cover {
